# comment-toxicity-prediction

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_PL.md  config.py  main.py  model_utils.py  pyproject.toml  requirements.txt  test_model.py  text_processing.py  train_model.py
src/toxicity_detector/: __init__.py  config.py
src/toxicity_detector/cli/: __init__.py  main.py  test.py  train.py
src/toxicity_detector/core/: __init__.py  training.py
src/toxicity_detector/utils/: __init__.py  model_utils.py  text_processing.py
